@@ -1,7 +1,7 @@
 #  File src/library/base/R/raw.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2017 The R Core Team
+#  Copyright (C) 1995-2020 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -27,6 +27,9 @@ rawShift <- function(x, n) .Internal(rawShift(x, n))
 
 rawToBits <- function(x) .Internal(rawToBits(x))
 intToBits <- function(x) .Internal(intToBits(x))
+
+numToInts <- function(x) .Internal(numToInts(x))
+numToBits <- function(x) .Internal(numToBits(x))
 
 packBits <- function(x, type=c("raw", "integer"))
 {
