@@ -1,6 +1,6 @@
 % File src/library/base/man/rawConversion.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 2004-2014 R Core Team
+% Copyright 2004-2020 R Core Team
 % Distributed under GPL 2 or later
 
 \name{rawConversion}
@@ -10,9 +10,12 @@
 \alias{rawToBits}
 \alias{intToBits}
 \alias{packBits}
-\title{Convert to or from Raw Vectors}
+\alias{numToInts}
+\alias{numToBits}
+\title{Convert to or from (Bit/Packed) Raw Vectors}
 \description{
-  Conversion and manipulation of  objects of type \code{"raw"}.
+  Conversion to and from and manipulation of objects of type \code{"raw"},
+  both used as bits or \dQuote{packed} 8 bits.
 }
 \usage{
 charToRaw(x)
@@ -23,6 +26,9 @@ rawShift(x, n)
 rawToBits(x)
 intToBits(x)
 packBits(x, type = c("raw", "integer"))
+
+numToInts(x)
+numToBits(x)
 }
 \arguments{
   \item{x}{object to be converted or shifted.}
@@ -56,6 +62,11 @@ packBits(x, type = c("raw", "integer"))
 
   \code{packBits} packs its input (using only the lowest bit for raw or
   integer vectors) least-significant bit first to a raw or integer vector.
+
+  \code{numToInts()} and
+  \code{numToBits()} split \code{\link{double}} precision numeric vectors
+  either into to two \code{\link{integer}}s each or into 64 bits each,
+  stored as \code{raw}.
 }
 \details{
   \code{packBits} accepts raw, integer or logical inputs, the last two
@@ -91,5 +102,54 @@ showBits(z)
 showBits(rawShift(z, -1)) # shift to left
 showBits(rawShift(z, -2)) # ..
 showBits(rawShift(z, -3)) # shifted off entirely
+
+packBits(as.raw(0:31))
+i <- -2:3
+stopifnot(exprs = {
+  identical(i, packBits(intToBits(i), "integer"))
+  identical(packBits(       0:31) ,
+            packBits(as.raw(0:31)))
+})
+str(pBi <- packBits(intToBits(i)))
+data.frame(B = matrix(pBi, nrow=6, byrow=TRUE),
+           hex = format(as.hexmode(i)), i)
+
+
+## Look at internal bit representation of ...
+
+## ... of integers :
+##
+.Platform $ endian # "little" (typically on all platforms R runs (?))
+R <- if(.Platform $ endian == "little") rev else identity
+bitI <- function(x) vapply(as.integer(x), function(x) {
+            b <- substr(as.character(R(intToBits(x))), 2L, 2L)
+            paste0(c(b[1L], " ", b[2:32]), collapse = "")
+          }, "")
+print(bitI(-8:8), width = 35, quote = FALSE)
+
+## ... of double precision numbers in format  'sign exp | mantissa'
+## where  1 bit sign  1 <==> "-";
+##       11 bit exp   is the base-2 exponent in 2-complement form
+##       52 bit mantissa is without the implicit leading '1'
+#
+R <- if(.Platform $ endian == "little") rev else identity
+
+## Bit representation  [ sign | exponent | mantissa ] of double prec numbers :
+
+bitC <- function(x) noquote(vapply(as.double(x), function(x) { # split one double
+    b <- substr(as.character(R(numToBits(x))), 2L, 2L)
+    paste0(c(b[1L], " ", b[2:12], " | ", b[13:64]), collapse = "")
+  }, ""))
+bitC(17)
+bitC(c(-1,0,1))
+bitC(2^(-2:5))
+bitC(1+2^-(1:53))# from 0.5 converge to 1
+
+###  numToBits(.)  <==>   intToBits(numToInts(.)) :
+d2bI <- function(x) vapply(as.double(x), function(x) intToBits(numToInts(x)), raw(64L))
+d2b  <- function(x) vapply(as.double(x), function(x)           numToBits(x) , raw(64L))
+set.seed(1)
+x <- c(sort(rt(2048, df=1.5)),  2^(-10:10), 1+2^-(1:53))
+stopifnot( identical(d2b(x), d2bI(x)) )
 }
 \keyword{classes}
