@@ -553,6 +553,8 @@ FUNTAB R_FunTab[] = {
     {"rawToChar", do_rawToChar, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"rawShift", do_rawShift, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"intToBits", do_intToBits, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
+    {"numToBits", do_numToBits, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
+    {"numToInts", do_numToInts, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"rawToBits", do_rawToBits, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"packBits", do_packBits, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"utf8ToInt", do_utf8ToInt, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
