@@ -129,20 +129,56 @@ SEXP attribute_hidden do_rawToBits(SEXP call, SEXP op, SEXP args, SEXP env)
 
 SEXP attribute_hidden do_intToBits(SEXP call, SEXP op, SEXP args, SEXP env)
 {
-    SEXP ans, x;
-    R_xlen_t i, j = 0;
-    unsigned int tmp;
-
     checkArity(op, args);
-    PROTECT(x = coerceVector(CAR(args), INTSXP));
+    SEXP x = PROTECT(coerceVector(CAR(args), INTSXP));
     if (!isInteger(x))
         error(_("argument 'x' must be an integer vector"));
-    PROTECT(ans = allocVector(RAWSXP, 32 * XLENGTH(x)));
+    SEXP ans = PROTECT(allocVector(RAWSXP, 32 * XLENGTH(x)));
+    R_xlen_t i, j = 0;
     for (i = 0; i < XLENGTH(x); i++)
     {
-        tmp = (unsigned int)INTEGER(x)[i];
+        unsigned int tmp = (unsigned int)INTEGER(x)[i];
         for (int k = 0; k < 32; k++, tmp >>= 1)
             RAW(ans)[j++] = tmp & 0x1;
+    }
+    UNPROTECT(2);
+    return ans;
+}
+
+// split "real" (double = 64-bit) into two 32-bit parts (which the user can split to bits):
+SEXP attribute_hidden do_numToInts(SEXP call, SEXP op, SEXP args, SEXP env)
+{
+    checkArity(op, args);
+    SEXP x = PROTECT(coerceVector(CAR(args), REALSXP));
+    if (!isReal(x))
+        error(_("argument 'x' must be a numeric vector"));
+    SEXP ans = PROTECT(allocVector(INTSXP, 2 * XLENGTH(x)));
+    R_xlen_t i, j = 0;
+    double *x_ = REAL(x);
+    for (i = 0; i < XLENGTH(x); i++)
+    {
+        int *tmp = (int *)&(x_[i]);
+        INTEGER(ans)[j++] = tmp[0];
+        INTEGER(ans)[j++] = tmp[1];
+    }
+    UNPROTECT(2);
+    return ans;
+}
+// split "real", i.e. = double = 64-bitd, to bits (<==> do_intToBits( do_numToInts(..) .. ))
+SEXP attribute_hidden do_numToBits(SEXP call, SEXP op, SEXP args, SEXP env)
+{
+    checkArity(op, args);
+    SEXP x = PROTECT(coerceVector(CAR(args), REALSXP));
+    if (!isReal(x))
+        error(_("argument 'x' must be a numeric vector"));
+    SEXP ans = PROTECT(allocVector(RAWSXP, 64 * XLENGTH(x)));
+    R_xlen_t i, j = 0;
+    double *x_ = REAL(x);
+    for (i = 0; i < XLENGTH(x); i++)
+    {
+        uint64_t *tmp = (uint64_t *)&(x_[i]);
+        for (int k = 0; k < 64; k++, (*tmp) >>= 1)
+            RAW(ans)[j++] = (*tmp) & 0x1;
     }
     UNPROTECT(2);
     return ans;
